@@ -1,7 +1,12 @@
+2008-04-14  Philippe Brochard  <pbrochard@common-lisp.net>
+
+	* src/clfswm-keys.lisp (define-ungrab/grab): Handle all keysyms in
+	the main mode (for example: "1" on an azerty keyboard).
+
 2008-04-13  Philippe Brochard  <pbrochard@common-lisp.net>
 
 	* src/clfswm-keys.lisp (find-key-from-code): Better handle of
-	keysyms. Revert to hold grabning method for the main mode.
+	keysyms. Revert to hold grabbing method for the main mode.
 
 2008-04-12  Philippe Brochard  <pbrochard@common-lisp.net>
 
